--- a/oa-cms/package.json
+++ b/oa-cms/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "jshint": "^2.5.6",
-    "nsp": "^2.1.0"
+    "nsp": "^2.1.0",
+    "proxy-middleware": "^0.15.0"
   },
   "repository": {
     "type": "",
